@@ -4,4 +4,5 @@ this repository contains the full copyright notices and license terms. -->
 <tree string="Domains" sequence="sequence">
     <field name="sequence" tree_invisible="1"/>
     <field name="name" expand="1"/>
+    <field name="count"/>
 </tree>
